--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -29,7 +29,7 @@
    "outputs": [],
    "source": [
     "# Nombre de villes\n",
-    "num_cities = 7"
+    "nb_villes = 7"
    ]
   },
   {
@@ -39,9 +39,9 @@
    "outputs": [],
    "source": [
     "# Calculer la distance entre deux villes en utilisant leurs coordonnées\n",
-    "def calculate_distance(city1, city2):\n",
-    "    lat1, lon1 = city1[' Latitude '], city1[' Longitude ']\n",
-    "    lat2, lon2 = city2[' Latitude '], city2[' Longitude ']\n",
+    "def calcul_distance(ville1, ville2):\n",
+    "    lat1, lon1 = ville1[' Latitude '], ville1[' Longitude ']\n",
+    "    lat2, lon2 = ville2[' Latitude '], ville2[' Longitude ']\n",
     "    # Utiliser la formule de distance entre deux points géographiques\n",
     "    # Ici, on utilise la distance en ligne droite (hypoténuse)\n",
     "    return np.sqrt((lat2 - lat1)**2 + (lon2 - lon1)**2)"
@@ -65,32 +65,32 @@
    "source": [
     "# Initialiser la distance minimale à une valeur élevée\n",
     "min_total_distance = float('inf')\n",
-    "optimal_path = None\n",
+    "chemin_optimal = None\n",
     "\n",
     "# Générer toutes les permutations des indices des villes\n",
-    "all_permutations = permutations(range(num_cities))\n",
+    "all_permutations = permutations(range(nb_villes))\n",
     "\n",
     "start_time = time.time()\n",
     "# Parcourir toutes les permutations et trouver la plus courte distance\n",
     "for perm in all_permutations:\n",
     "    total_distance = 0\n",
-    "    for i in range(num_cities):\n",
+    "    for i in range(nb_villes):\n",
     "        # Calculer la distance entre la ville i et la ville suivante dans la permutation\n",
-    "        total_distance += calculate_distance(df.iloc[perm[i]], df.iloc[perm[(i + 1) % num_cities]])\n",
+    "        total_distance += calcul_distance(df.iloc[perm[i]], df.iloc[perm[(i + 1) % nb_villes]])\n",
     "    \n",
     "    # Ajouter la distance pour revenir à la ville de départ\n",
-    "    total_distance += calculate_distance(df.iloc[perm[num_cities - 1]], df.iloc[perm[0]])\n",
+    "    total_distance += calcul_distance(df.iloc[perm[nb_villes - 1]], df.iloc[perm[0]])\n",
     "    \n",
     "    # Mettre à jour la distance minimale et le chemin optimal\n",
     "    if total_distance < min_total_distance:\n",
     "        min_total_distance = total_distance\n",
-    "        optimal_path = perm\n",
+    "        chemin_optimal = perm\n",
     "\n",
     "end_time = time.time()\n",
     "execution_time = end_time - start_time\n",
     "\n",
     "# Afficher le chemin optimal et la distance minimale\n",
-    "print(\"Chemin optimal:\", optimal_path)\n",
+    "print(\"Chemin optimal:\", chemin_optimal)\n",
     "print(\"Distance minimale:\", min_total_distance)\n",
     "print(\"Temps d'exécution:\", execution_time, \"secondes\")\n"
    ]
