--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Nombre de villes\n",
-    "num_cities = len(df)"
+    "nb_villes = len(df)"
    ]
   },
   {
@@ -87,9 +87,9 @@
    "outputs": [],
    "source": [
     "# Construire la matrice de distances à partir des coordonnées en utilisant la fonction haversine_distance\n",
-    "distances = np.zeros((num_cities, num_cities))\n",
-    "for i in range(num_cities):\n",
-    "    for j in range(num_cities):\n",
+    "distances = np.zeros((nb_villes, nb_villes))\n",
+    "for i in range(nb_villes):\n",
+    "    for j in range(nb_villes):\n",
     "        distances[i, j] = haversine_distance(df.iloc[i][' Latitude '], df.iloc[i][' Longitude '],\n",
     "                                             df.iloc[j][' Latitude '], df.iloc[j][' Longitude '])\n"
    ]
@@ -114,7 +114,7 @@
    "outputs": [],
    "source": [
     "# Initialiser un chemin aléatoire\n",
-    "current_path = np.random.permutation(num_cities)\n"
+    "sigma = np.random.permutation(nb_villes)\n"
    ]
   },
   {
@@ -126,9 +126,9 @@
     "# Fonction pour calculer la distance totale d'un chemin\n",
     "def total_distance(path, distances):\n",
     "    total_dist = 0\n",
-    "    num_cities = len(path)\n",
-    "    for i in range(num_cities):\n",
-    "        total_dist += distances[path[i], path[(i + 1) % num_cities]]\n",
+    "    nb_villes = len(path)\n",
+    "    for i in range(nb_villes):\n",
+    "        total_dist += distances[path[i], path[(i + 1) % nb_villes]]\n",
     "    return total_dist"
    ]
   },
@@ -185,32 +185,32 @@
     "# Algorithme MCMC\n",
     "for _ in range(N):\n",
     "    # Copier le chemin courant\n",
-    "    new_path = current_path.copy()\n",
+    "    sigma_prime = sigma.copy()\n",
     "    \n",
     "    # Choisir deux indices différents aléatoirement\n",
-    "    idx1, idx2 = np.random.choice(num_cities, 2, replace=False)\n",
+    "    idx1, idx2 = np.random.choice(nb_villes, 2, replace=False)\n",
     "    \n",
     "    # Permuter les villes aux indices choisis\n",
-    "    new_path[idx1], new_path[idx2] = new_path[idx2], new_path[idx1]\n",
+    "    sigma_prime[idx1], sigma_prime[idx2] = sigma_prime[idx2], sigma_prime[idx1]\n",
     "\n",
     "    # Calculer la différence de distances normalisées\n",
-    "    delta_distance = (total_distance(current_path, distances_normalized) - total_distance(new_path, distances_normalized))\n",
+    "    delta_distance = (total_distance(sigma, distances_normalized) - total_distance(sigma_prime, distances_normalized))\n",
     "    \n",
     "    \n",
-    "    # Calculer les probabilités de transition\n",
-    "    q_current_new = 2 / (num_cities * (num_cities - 1))\n",
-    "    q_new_current = 2 / (num_cities * (num_cities - 1))\n",
+    "    # Calculer les probabilités de transition (pas utile ici car les probabilités sont symétriques)\n",
+    "    # q_current_new = 2 / (nb_villes * (nb_villes - 1))\n",
+    "    # q_new_current = 2 / (nb_villes * (nb_villes - 1))\n",
     "    \n",
     "    # Calculer le rapport de probabilité\n",
-    "    rho = np.exp((1 / temperature) * (total_distance(current_path, distances) - total_distance(new_path, distances)))\n",
+    "    rho = np.exp((1 / temperature) * (total_distance(sigma, distances) - total_distance(sigma_prime, distances)))\n",
     "    \n",
     "    # Mettre à jour le chemin avec une certaine probabilité\n",
     "    if rho >= 1 or random.random() < rho:\n",
-    "        current_path = new_path\n",
+    "        sigma = sigma_prime\n",
     "\n",
     "# Afficher le chemin et la distance totale\n",
-    "print(\"Chemin optimal:\", current_path)\n",
-    "print(\"Distance minimale:\", total_distance(current_path, distances))"
+    "print(\"Chemin optimal:\", sigma)\n",
+    "print(\"Distance minimale:\", total_distance(sigma, distances))"
    ]
   },
   {
@@ -254,9 +254,9 @@
     "\n",
     "\n",
     "# Ajouter le chemin indiqué par les indices des villes dans le meilleur chemin\n",
-    "for i in range(num_cities):\n",
-    "    plt.plot([df.iloc[current_path[i]][' Longitude '], df.iloc[current_path[(i + 1) % num_cities]][' Longitude ']],\n",
-    "             [df.iloc[current_path[i]][' Latitude '], df.iloc[current_path[(i + 1) % num_cities]][' Latitude ']],\n",
+    "for i in range(nb_villes):\n",
+    "    plt.plot([df.iloc[sigma[i]][' Longitude '], df.iloc[sigma[(i + 1) % nb_villes]][' Longitude ']],\n",
+    "             [df.iloc[sigma[i]][' Latitude '], df.iloc[sigma[(i + 1) % nb_villes]][' Latitude ']],\n",
     "             color='blue', linewidth=1, transform=ccrs.PlateCarree())\n",
     "\n",
     "plt.show()\n",
