--- a/Q3.ipynb
+++ b/Q3.ipynb
@@ -21,7 +21,7 @@
     "df = pd.read_csv('data/selected.csv')\n",
     "\n",
     "# Nombre de villes\n",
-    "num_cities = len(df)"
+    "nb_villes = len(df)"
    ]
   },
   {
@@ -60,9 +60,9 @@
    "outputs": [],
    "source": [
     "# Construire la matrice de distances à partir des coordonnées en utilisant la fonction haversine_distance\n",
-    "distances = np.zeros((num_cities, num_cities))\n",
-    "for i in range(num_cities):\n",
-    "    for j in range(num_cities):\n",
+    "distances = np.zeros((nb_villes, nb_villes))\n",
+    "for i in range(nb_villes):\n",
+    "    for j in range(nb_villes):\n",
     "        distances[i, j] = haversine_distance(df.iloc[i][' Latitude '], df.iloc[i][' Longitude '],\n",
     "                                             df.iloc[j][' Latitude '], df.iloc[j][' Longitude '])\n"
    ]
@@ -76,9 +76,9 @@
     "# Fonction pour calculer la distance totale d'un chemin\n",
     "def total_distance(path, distances):\n",
     "    total_dist = 0\n",
-    "    num_cities = len(path)\n",
-    "    for i in range(num_cities):\n",
-    "        total_dist += distances[path[i], path[(i + 1) % num_cities]]\n",
+    "    nb_villes = len(path)\n",
+    "    for i in range(nb_villes):\n",
+    "        total_dist += distances[path[i], path[(i + 1) % nb_villes]]\n",
     "    return total_dist"
    ]
   },
@@ -89,7 +89,7 @@
    "outputs": [],
    "source": [
     "# Fonction pour générer un voisin en échangeant deux villes dans le chemin\n",
-    "def generate_neighbor(path):\n",
+    "def generer_voisin(path):\n",
     "    new_path = path.copy()\n",
     "    idx1, idx2 = np.random.choice(len(path), 2, replace=False)\n",
     "    new_path[idx1], new_path[idx2] = new_path[idx2], new_path[idx1]\n",
@@ -103,32 +103,32 @@
    "outputs": [],
    "source": [
     "# Algorithme du recuit simulé\n",
-    "def recuit_simulé(distances, initial_path, max_iterations, initial_temperature, cooling_rate):\n",
-    "    current_path = initial_path\n",
-    "    best_path = initial_path\n",
-    "    current_distance = total_distance(current_path, distances)\n",
-    "    best_distance = current_distance\n",
-    "    temperature = initial_temperature\n",
+    "def recuit_simulé(distances, premier_chemin, max_iterations, temperature_initiale, taux_refroidissement):\n",
+    "    sigma = premier_chemin\n",
+    "    meilleur_chemin = premier_chemin\n",
+    "    sigma_distance = total_distance(sigma, distances)\n",
+    "    meilleure_distance = sigma_distance\n",
+    "    temperature = temperature_initiale\n",
     "\n",
     "    for i in range(max_iterations):\n",
-    "        neighbor_path = generate_neighbor(current_path)\n",
-    "        neighbor_distance = total_distance(neighbor_path, distances)\n",
-    "        delta_distance = neighbor_distance - current_distance\n",
+    "        voisin_chemin = generer_voisin(sigma)\n",
+    "        voisin_distance = total_distance(voisin_chemin, distances)\n",
+    "        delta_distance = voisin_distance - sigma_distance\n",
     "\n",
     "        # Si le voisin est meilleur ou selon une certaine probabilité, acceptez le voisin\n",
     "        if delta_distance < 0 or np.random.rand() < np.exp(-delta_distance / temperature):\n",
-    "            current_path = neighbor_path\n",
-    "            current_distance = neighbor_distance\n",
+    "            sigma = voisin_chemin\n",
+    "            sigma_distance = voisin_distance\n",
     "\n",
     "            # Mettez à jour le meilleur chemin trouvé jusqu'à présent\n",
-    "            if current_distance < best_distance:\n",
-    "                best_path = current_path\n",
-    "                best_distance = current_distance\n",
+    "            if sigma_distance < meilleure_distance:\n",
+    "                meilleur_chemin = sigma\n",
+    "                meilleure_distance = sigma_distance\n",
     "\n",
     "        # Refroidissement\n",
-    "        temperature *= cooling_rate\n",
+    "        temperature *= taux_refroidissement\n",
     "\n",
-    "    return best_path, best_distance"
+    "    return meilleur_chemin, meilleure_distance"
    ]
   },
   {
@@ -149,18 +149,18 @@
    "source": [
     "# Paramètres de l'algorithme\n",
     "max_iterations = 10000  # Nombre maximum d'itérations\n",
-    "initial_temperature = 1000.0  # Température initiale\n",
-    "cooling_rate = 0.995  # Taux de refroidissement\n",
+    "temperature_initiale = 1000.0  # Température initiale\n",
+    "taux_refroidissement = 0.995  # Taux de refroidissement\n",
     "\n",
     "# Génération d'un chemin initial aléatoire\n",
-    "initial_path = np.random.permutation(num_cities)\n",
+    "premier_chemin = np.random.permutation(nb_villes)\n",
     "\n",
     "# Application de l'algorithme du recuit simulé\n",
-    "best_path, best_distance = recuit_simulé(distances, initial_path, max_iterations, initial_temperature, cooling_rate)\n",
+    "meilleur_chemin, meilleure_distance = recuit_simulé(distances, premier_chemin, max_iterations, temperature_initiale, taux_refroidissement)\n",
     "\n",
     "# Afficher le meilleur chemin et sa distance\n",
-    "print(\"Meilleur chemin trouvé:\", best_path)\n",
-    "print(\"Distance minimale:\", best_distance)\n"
+    "print(\"Meilleur chemin trouvé:\", meilleur_chemin)\n",
+    "print(\"Distance minimale:\", meilleure_distance)\n"
    ]
   },
   {
@@ -204,9 +204,9 @@
     "\n",
     "\n",
     "# Ajouter le chemin indiqué par les indices des villes dans le meilleur chemin\n",
-    "for i in range(num_cities):\n",
-    "    plt.plot([df.iloc[best_path[i]][' Longitude '], df.iloc[best_path[(i + 1) % num_cities]][' Longitude ']],\n",
-    "             [df.iloc[best_path[i]][' Latitude '], df.iloc[best_path[(i + 1) % num_cities]][' Latitude ']],\n",
+    "for i in range(nb_villes):\n",
+    "    plt.plot([df.iloc[meilleur_chemin[i]][' Longitude '], df.iloc[meilleur_chemin[(i + 1) % nb_villes]][' Longitude ']],\n",
+    "             [df.iloc[meilleur_chemin[i]][' Latitude '], df.iloc[meilleur_chemin[(i + 1) % nb_villes]][' Latitude ']],\n",
     "             color='blue', linewidth=1, transform=ccrs.PlateCarree())\n",
     "\n",
     "plt.show()\n"
